edits on ReadMe: removed initial text for javafx